--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="app_name">Jamood</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
+    <string name="JSONException">Can not parse server response</string>
+    <string name="MediaPlayerException">Can not play this song</string>
     <string name="title_section3">Section 3</string>
 
 </resources>
