--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="app_name">Jamood</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="about_text">Content is provided by Jamendo.com</string>
+    <string name="inet_text">Please check your Internet connection</string>
     <string name="JSONException">Can not parse server response</string>
     <string name="MediaPlayerException">Can not play this song</string>
     <string name="title_section3">Section 3</string>
